added dedicated interpolation module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set (sources
         mod_types.f08
         mod_check_values.f08
         mod_spline_functions.f08
+        mod_interpolation.f08
         dataIO/mod_input.f08
         physics/mod_resistivity.f08
         physics/mod_cooling_curves.f08
