--- a/tests/core_tests/CMakeLists.txt
+++ b/tests/core_tests/CMakeLists.txt
@@ -54,6 +54,7 @@ set( test_sources
         mod_test_splines.pf
         mod_test_subblock.pf
         mod_test_solvers.pf
+        mod_test_interpolation.pf
 )
 add_pfunit_ctest (test_legolas
         TEST_SOURCES ${test_sources}
