--- a/tests/core_tests/CMakeLists.txt
+++ b/tests/core_tests/CMakeLists.txt
@@ -55,6 +55,7 @@ set( test_sources
         mod_test_subblock.pf
         mod_test_solvers.pf
         mod_test_interpolation.pf
+        mod_test_integration.pf
 )
 add_pfunit_ctest (test_legolas
         TEST_SOURCES ${test_sources}
