--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 set (sources
+        mod_version.f08
         mod_global_variables.f08
         dataIO/mod_painting.f08
         mod_equilibrium_params.f08
