--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set (sources
         mod_grid.f08
         mod_types.f08
         mod_check_values.f08
+        solvers/mod_matrix_operations.f08
         mod_spline_functions.f08
         mod_interpolation.f08
         mod_integration.f08
@@ -51,7 +52,8 @@ set (sources
         mod_make_subblock.f08
         mod_boundary_conditions.f08
         mod_matrix_creation.f08
-        mod_solvers.f08
+        solvers/mod_solvers.f08
+        solvers/smod_qr_invert.f08
         mod_eigenfunctions.f08
         dataIO/mod_output.f08
 )
