--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ file(MAKE_DIRECTORY ${OUTPUT})
 include(${setup_tools}/findBLAS.cmake)
 include(${setup_tools}/findLAPACK.cmake)
 include(${setup_tools}/findSCALAPACK.cmake)
+include(${setup_tools}/findMUMPS.cmake)
 
 # name of library
 set(LEGOLASLIB lego)
