--- a/tests/core_tests/CMakeLists.txt
+++ b/tests/core_tests/CMakeLists.txt
@@ -56,6 +56,7 @@ set( test_sources
         mod_test_matrixoperations.pf
         mod_test_interpolation.pf
         mod_test_integration.pf
+        mod_test_lapacksolvers.pf
 )
 add_pfunit_ctest (test_legolas
         TEST_SOURCES ${test_sources}
