--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 title: The Legolas Code
 subtitle: A novel tool for MHD spectroscopy
 email: niels.claes@kuleuven.be
-baseurl: /legolas
+baseurl: /
 description: >-
   The Legolas code
 permalink: pretty
