updated regression workflow for new tests

--- a/.github/workflows/regression_tests.yml
+++ b/.github/workflows/regression_tests.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest numpy matplotlib f90nml tqdm psutil
+        pip install pytest numpy matplotlib f90nml tqdm psutil pytest-mpl
         cd post_processing
         python setup.py develop
 
@@ -45,7 +45,7 @@ jobs:
     - name: Run regression tests
       run: |
         cd tests/regression_tests
-        pytest
+        pytest regression.py test* -v --mpl --mpl-results-path=results
 
     - name: Archive failed logs
       uses: actions/upload-artifact@v1
