--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ set (sources
         equilibria/smod_equil_suydam_cluster.f08
         ${USR_SMOD_LOC}/smod_user_defined.f08
         mod_make_subblock.f08
+        physics/mod_viscosity.f08
         mod_boundary_conditions.f08
         mod_matrix_creation.f08
         solvers/mod_solvers.f08
