preparing for matrix splitting, general file structure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,10 +53,11 @@ set (sources
         equilibria/smod_equil_taylor_couette.f08
         equilibria/smod_equil_harris_sheet.f08
         ${USR_SMOD_LOC}/smod_user_defined.f08
-        mod_make_subblock.f08
+        matrices/mod_make_subblock.f08
+        matrices/mod_matrix_manager.f08
+        matrices/smod_regular_matrix.f08
         physics/mod_viscosity.f08
         mod_boundary_conditions.f08
-        mod_matrix_creation.f08
         solvers/mod_solvers.f08
         solvers/mod_arpack_type.f08
         solvers/smod_qr_invert.f08
