--- a/.github/workflows/regression_tests.yml
+++ b/.github/workflows/regression_tests.yml
@@ -2,7 +2,7 @@ name: regression
 
 on:
   push:
-    branches: [master, develop, feature/matrix_rework]
+    branches: [master, develop]
   pull_request:
     branches: [master, develop]
 
