--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -62,7 +62,7 @@ set( test_sources
         mod_test_cooling.pf
         mod_test_resistivity.pf
         mod_test_conduction.pf
-        # mod_test_boundaries.pf
+        mod_test_boundaries.pf
         # mod_test_splines.pf
         # mod_test_subblock.pf
         # mod_test_matrixoperations.pf
