--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -64,8 +64,8 @@ set( test_sources
         mod_test_conduction.pf
         mod_test_boundaries.pf
         mod_test_splines.pf
-        # mod_test_subblock.pf
-        # mod_test_matrixoperations.pf
+        mod_test_subblock.pf
+        mod_test_matrixoperations.pf
         # mod_test_interpolation.pf
         # mod_test_integration.pf
         # mod_test_lapacksolvers.pf
