--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -66,7 +66,7 @@ set( test_sources
         mod_test_splines.pf
         mod_test_subblock.pf
         mod_test_matrixoperations.pf
-        # mod_test_interpolation.pf
+        mod_test_interpolation.pf
         # mod_test_integration.pf
         # mod_test_lapacksolvers.pf
         # mod_test_arpacksolvers.pf
