--- a/.github/workflows/pylbo.yml
+++ b/.github/workflows/pylbo.yml
@@ -1,4 +1,4 @@
-name: pylbo-core
+name: pylbo
 
 on:
   push:
@@ -53,32 +53,11 @@ jobs:
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest numpy matplotlib f90nml tqdm psutil pytest-mpl pytest-timeout
+        pip install pytest pytest-cov
         cd post_processing
         python setup.py develop
-
-    - name: Install Legolas dependencies
-      run: |
-        sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-        sudo apt update
-        sudo apt-get install gfortran-9
-        sudo apt-get -y install cmake
-        sudo apt-get install libblas-dev
-        sudo apt-get install liblapack-dev
-        gfortran-9 --version
-        cmake --version
-
-    - name: Compile Legolas
-      run: sh setup_tools/buildlegolas.sh
 
     - name: Test Pylbo core
       run: |
         cd tests/pylbo_tests
-        pytest --mpl --mpl-results-path=results --verbose
-
-    - name: Archive failed logs
-      uses: actions/upload-artifact@v1
-      if: failure()
-      with:
-        name: failed_logs
-        path: tests/pylbo_tests/results
+        pytest -v
