--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -2,60 +2,60 @@ main:
   - title: "Home"
     url: /index
   - title: "About"
-    url: /content/about/
+    url: /about/
   - title: "Code paper"
     url: "https://arxiv.org/abs/2010.14148"
   - title: "Detailed guide"
-    url: /content/getting-started/installation/
-  - title: "Source docs"
-    url: /content/src-docs/source_docs/
+    url: /getting-started/installation/
 
 leftcontents:
   - title: Getting started
     children:
       - title: "Installation"
-        url: /content/getting-started/installation/
+        url: /getting-started/installation/
       - title: "Running the code"
-        url: /content/getting-started/running/
+        url: /getting-started/running/
       - title: "Examples"
-        url: /content/getting-started/examples/
+        url: /getting-started/examples/
+      - title: "Source code documentation"
+        url: /source_docs
   - title: General
     children:
       - title: "Equations & Physics"
-        url: /content/general/equations_physics/
+        url: /general/equations_physics/
       - title: "Parameter file"
-        url: /content/general/parameter_file/
+        url: /general/parameter_file/
       - title: "Equilibria"
-        url: /content/general/equilibria/
+        url: /general/equilibria/
       - title: "Solvers"
-        url: /content/general/solvers/
+        url: /general/solvers/
       - title: "Running your own setup"
-        url: /content/general/own_setup/
+        url: /general/own_setup/
   - title: Data-analysis with Pylbo
     children:
       - title: "About Pylbo"
-        url: /content/pylbo/about_pylbo/
+        url: /pylbo/about_pylbo/
       - title: "Installing Pylbo"
-        url: /content/pylbo/installing_pylbo/
+        url: /pylbo/installing_pylbo/
       - title: "Interfacing with Legolas"
-        url: /content/pylbo/legolas_interface/
+        url: /pylbo/legolas_interface/
       - title: "Using Pylbo"
-        url: /content/pylbo/using_pylbo/
+        url: /pylbo/using_pylbo/
   - title: Testing
     children:
       - title: "Code coverage"
-        url: /content/testing/coverage/
+        url: /testing/coverage/
       - title: "Core routines"
-        url: /content/testing/test_core/
+        url: /testing/test_core/
       - title: "Regression"
-        url: /content/testing/test_regression/
+        url: /testing/test_regression/
       - title: "Pylbo"
-        url: /content/testing/test_pylbo/
+        url: /testing/test_pylbo/
   - title: Misc
     children:
       - title: "Legolas changelog"
-        url: /content/misc/legolas_changelog/
+        url: /misc/legolas_changelog/
       - title: "Pylbo changelog"
-        url: /content/misc/pylbo_changelog/
+        url: /misc/pylbo_changelog/
       - title: "Contributing"
-        url: /content/misc/contributing/
+        url: /misc/contributing/
