rework of eigenfunction module to support subset selection

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,8 +80,9 @@ set (sources
         solvers/smod_qr_invert.f08
         solvers/smod_qz_direct.f08
         solvers/smod_arnoldi.f08
-        mod_eigenfunctions.f08
-        mod_postprocessing.f08
+        eigenfunctions/mod_eigenfunctions.f08
+        eigenfunctions/smod_base_eigenfunctions.f08
+        # mod_postprocessing.f08
         dataIO/mod_output.f08
 )
 
