--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -81,6 +81,7 @@ set (sources
         solvers/smod_qz_direct.f08
         solvers/smod_arnoldi.f08
         eigenfunctions/mod_eigenfunctions.f08
+        eigenfunctions/smod_eigenfunction_operations.f08
         eigenfunctions/smod_base_eigenfunctions.f08
         eigenfunctions/smod_derived_eigenfunctions.f08
         dataIO/mod_output.f08
