moved 4piG function to dedicated physics module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ set (sources
         mod_interpolation.f08
         mod_integration.f08
         dataIO/mod_input.f08
+        physics/mod_selfgravity.f08
         physics/mod_resistivity.f08
         physics/mod_cooling_curves.f08
         physics/mod_atmosphere_curves.f08
