fix ford version due to upstream bug

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ford graphviz
+        pip install ford==6.1.6 graphviz
         sudo apt-get install graphviz
         pip install -U sphinx
         pip install numpydoc sphinx-rtd-theme lazy-object-proxy==1.4 sphinx-autoapi
